RESOLVED FIXED 259189
[macOS] Screen/window picker sometimes remains after capture stops
https://bugs.webkit.org/show_bug.cgi?id=259189
Summary [macOS] Screen/window picker sometimes remains after capture stops
Eric Carlson
Reported 2023-07-13 06:59:28 PDT
The screen/window picker sometimes remains after capture stops
Attachments
Eric Carlson
Comment 1 2023-07-13 06:59:42 PDT
Eric Carlson
Comment 2 2023-07-13 07:09:23 PDT
EWS
Comment 3 2023-07-13 10:44:48 PDT
Committed 266041@main (c44cb3077074): <https://commits.webkit.org/266041@main> Reviewed commits have been landed. Closing PR #15818 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.