Cherry-pick c44cb3077074. rdar://problem/112195888

[macOS] Screen/window picker sometimes remains after capture stops
    https://bugs.webkit.org/show_bug.cgi?id=259189
    rdar://112195888

    Reviewed by Youenn Fablet and Jer Noble.

    Deactivate the screen/window picker during session cleanup unless another picking session
    is active, so the menu is hidden when there are no active capture streams.

    * Source/WebCore/platform/mediastream/mac/ScreenCaptureKitCaptureSource.mm:
    (WebCore::ScreenCaptureKitCaptureSource::stop): Clear `m_sessionSource` immediately instead
    of in the stop lambda, there is no reason to wait.

    * Source/WebCore/platform/mediastream/mac/ScreenCaptureKitSharingSessionManager.h
    * Source/WebCore/platform/mediastream/mac/ScreenCaptureKitSharingSessionManager.mm:
    (WebCore::ScreenCaptureKitSharingSessionManager::cleanupSessionSource): If a prompt isn't
    active, call `cancelPicking` to cleanup.

    Canonical link: https://commits.webkit.org/266041@main

Identifier: 265870.188@safari-7616-branch